--- a/my_accession.html
+++ b/my_accession.html
@@ -19,12 +19,8 @@
 
  <body>
  
-<script>
-
-</script>
- 
  <div id="header">
- <p id="header_text">Join and Do</p>
+ <a href="index.html" id="header_text">Join and Do</a>
  <input id="header_search_text" type="text">
  </div>
  
