--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  </head>
  <body>
  <div id="header">
- <p id="header_text">Join and Do</p>
+ <a href="index.html" id="header_text">Join and Do</a>
  <input id="header_search_text" type="text">
  </div>
  
