--- a/deals_accession.html
+++ b/deals_accession.html
@@ -3,7 +3,7 @@
 	<title>Join and Do</title>
 	
 	<link type="text/css" rel="StyleSheet" href="styles/style.css" />
-	<link type="text/css" rel="StyleSheet" href="styles/style_my_messages.css" />
+	<link type="text/css" rel="StyleSheet" href="styles/style_deals_accession.css" />
 	
 	<link rel="stylesheet" media="screen and (min-width:900px) and (max-width:1266px)" href="styles/adapt.css" />
 	<link rel="stylesheet" media="screen and (min-width:480px) and (max-width:899px)" href="styles/adapt_phone.css" />
@@ -11,9 +11,6 @@
 		
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
- 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src='scripts/sc_my_msg.js' language='javascript'></script>
 	
  </head>
 
@@ -43,7 +40,39 @@
  </div>
  
  <div id="blocks">
-
+ 	<div class="block">
+		<div class="name">Test name #1</div>
+			<div class="rating">
+				<p class="number_of_people">3/7</p>
+			</div>
+			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter.</div>
+		<button class="btn_join">Reject</button>
+		<button class="btn_join">Accept</button>
+		<div class="name_Invitor" >Nazar Dorin</div>
+	</div>
+	
+ 	<div class="block">
+		<div class="name">Test name #2</div>
+			<div class="rating">
+				<p class="number_of_people">3/7</p>
+			</div>
+			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter.</div>
+		<button class="btn_join">Reject</button>
+		<button class="btn_join">Accept</button>
+		<div class="name_Invitor" >Bogdan Nezairs</div>
+	</div>
+	
+ 	<div class="block">
+		<div class="name">Test name #3</div>
+			<div class="rating">
+				<p class="number_of_people">3/7</p>
+			</div>
+			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter.</div>
+		<button class="btn_join">Reject</button>
+		<button class="btn_join">Accept</button>
+		<div class="name_Invitor" >Nazar Sendder</div>
+	</div>
+	
  </div>
  
  </body> 
