--- a/test.html
+++ b/test.html
@@ -3,7 +3,8 @@
 	<title>Join and Do</title>
 	
 	<link type="text/css" rel="StyleSheet" href="styles/style.css" />
-
+	<link type="text/css" rel="StyleSheet" href="styles/style_test.css" />
+	
 	<link rel="stylesheet" media="screen and (min-width:900px) and (max-width:1266px)" href="styles/adapt.css" />
 	<link rel="stylesheet" media="screen and (min-width:480px) and (max-width:899px)" href="styles/adapt_phone.css" />
 	<link rel="stylesheet" media="screen and (max-width:479px)" href="styles/adapt_phone_vertical.css" />
@@ -38,6 +39,8 @@
  </div>
  
  <div id="blocks">
+	<div class="test" id="id1" >1</div>
+	<div class="test" id="id2">2</div>
  </div>
  
  </body> 
