--- a/deals_accession.html
+++ b/deals_accession.html
@@ -11,7 +11,9 @@
 		
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src='scripts/sc_link.js' language='javascript'></script>
  </head>
 
  <body>
