--- a/my_accession.html
+++ b/my_accession.html
@@ -12,6 +12,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src='scripts/sc_link.js' language='javascript'></script>
  </head>
 
  <body>
@@ -46,8 +48,7 @@
 				<p class="number_of_people">3/7</p>
 			</div>
 			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
-		<div class="img_progress" id="done" ></div>
-	</div>
+					<div  id="done" ></div></div>
 	
 	<div class="block">
 		<div class="name">Test name #2</div>
@@ -55,7 +56,7 @@
 				<p class="number_of_people">3/7</p>
 			</div>
 			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
-		<div class="img_progress" id="fail"></div>
+		<div  id="fail"></div>
 	</div>
  
 	<div class="block">
@@ -64,7 +65,7 @@
 				<p class="number_of_people">3/7</p>
 			</div>
 			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
-		<div class="img_progress" id="done" ></div>
+		<div  id="done" ></div>
 	</div>
 	
 	<div class="block">
@@ -73,7 +74,7 @@
 				<p class="number_of_people">3/7</p>
 			</div>
 			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
-		<div class="img_progress" id="done" ></div>
+		<div  id="done" ></div>
 	</div>
 	
 	<div class="block">
@@ -82,7 +83,7 @@
 				<p class="number_of_people">3/7</p>
 			</div>
 			<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
-		<div class="img_progress" id="done" ></div>
+		<div  id="done" ></div>
 	</div>
  </div>
  
