--- a/test.html
+++ b/test.html
@@ -11,6 +11,9 @@
 		
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src='scripts/sc_link.js' language='javascript'></script>
  </head>
 
  <body>
@@ -39,9 +42,45 @@
  </div>
  
  <div id="blocks">
-	<div class="test" id="id1" >1</div>
-	<div class="test" id="id2">2</div>
+	<div class="block">
+		<div class="name">Test name #1</div>
+		<div class="rating">
+			<p class="number_of_people">3/7</p>
+		</div>
+		<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
+		<button class="btn_join">Join</button>
+	</div>
+ 
+	<div class="block">
+		<div class="name">Test name #2</div>
+		<div class="rating">
+			<p class="number_of_people">3/7</p>
+		</div>
+		<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
+		<button class="btn_join">Join</button>
+	</div>
+ 
+	<div class="block">
+		<div class="name">Test name #3</div>
+		<div class="rating">
+			<p class="number_of_people">3/7</p>
+		</div>
+		<div class="description">Looking started he up perhaps against. How remainder all additions get elsewhere resources. One missed shy wishes supply design answer formed. Prevent on present hastily passage an subject in be. Be happiness arranging so newspaper defective affection ye. Families blessing he in to no daughter. </div>
+		<button class="btn_join">Join</button>
+	</div>
  </div>
+ 
+ <section class="container">
+  <div id="cube">
+    <figure class="front">1</figure>
+    <figure class="back">2</figure>
+    <figure class="right">3</figure>
+    <figure class="left">4</figure>
+    <figure class="top">5</figure>
+    <figure class="bottom">6</figure>
+  </div>
+</section>
+ 
  
  </body> 
 </html>
