--- a/my_message.html
+++ b/my_message.html
@@ -14,6 +14,7 @@
  
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src='scripts/sc_my_msg.js' language='javascript'></script>
+	<script src='scripts/sc_link.js' language='javascript'></script>
 	
  </head>
 
